[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/ReportScenes/ContainerTest.gd" type="Script" id=1]
[ext_resource path="res://Scenes/ReportScenes/ReportButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/HelperScenes/DateLine.tscn" type="PackedScene" id=3]

[node name="ReportTimeLog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.8806
margin_top = 1.65796
margin_right = 14.8805
margin_bottom = 1.65796
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -235.0
margin_top = -227.0
margin_right = 235.0
margin_bottom = 234.0
rect_min_size = Vector2( 470, 250 )

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 463.0
margin_bottom = 454.0

[node name="LabelEmpName" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 456.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
text = "Employee Name"
align = 1
valign = 1

[node name="ReportButton" parent="PanelContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 34.0
margin_right = 440.0
margin_bottom = 64.0
size_flags_horizontal = 0
header = true

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 456.0
margin_bottom = 72.0

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 456.0
margin_bottom = 371.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer/ScrollContainer"]
margin_right = 456.0
margin_bottom = 295.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
margin_top = 375.0
margin_right = 456.0
margin_bottom = 379.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 383.0
margin_right = 456.0
margin_bottom = 403.0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 185.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "Total Time Worked in Period:"

[node name="TimeWorked" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 189.0
margin_top = 3.0
margin_right = 257.0
margin_bottom = 17.0
text = "77777.777"

[node name="ButtonClose" type="Button" parent="PanelContainer/VBoxContainer"]
margin_left = 128.0
margin_top = 407.0
margin_right = 328.0
margin_bottom = 447.0
rect_min_size = Vector2( 200, 40 )
size_flags_horizontal = 6
text = "Close"

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -841.0
margin_top = -77.0
margin_right = -500.0
margin_bottom = 226.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="WindowDialog/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 336.0
margin_bottom = 298.0

[node name="HBoxContainer" type="HBoxContainer" parent="WindowDialog/MarginContainer/VBoxContainer"]
margin_left = 125.0
margin_right = 206.0
margin_bottom = 24.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 19.0
margin_bottom = 19.0
text = "ID:"

[node name="LineID" type="LineEdit" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 23.0
margin_right = 81.0
margin_bottom = 24.0
editable = false

[node name="HSeparator" type="HSeparator" parent="WindowDialog/MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 331.0
margin_bottom = 32.0

[node name="SignInDate" parent="WindowDialog/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 331.0
margin_bottom = 76.0
date_title = "Sign In"
key_to_pull = "signIn"

[node name="HBoxContainer2" type="HBoxContainer" parent="WindowDialog/MarginContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 80.0
margin_right = 331.0
margin_bottom = 104.0

[node name="Label" type="Label" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 36.0
margin_bottom = 19.0
text = "Time:"

[node name="SignInHour" type="LineEdit" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 40.0
margin_right = 98.0
margin_bottom = 24.0

[node name="Label2" type="Label" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 102.0
margin_top = 5.0
margin_right = 106.0
margin_bottom = 19.0
text = ":"

[node name="SignInMin" type="LineEdit" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 110.0
margin_right = 168.0
margin_bottom = 24.0

[node name="Label3" type="Label" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 172.0
margin_top = 5.0
margin_right = 260.0
margin_bottom = 19.0
text = "24-Hour Time"

[node name="HSeparator2" type="HSeparator" parent="WindowDialog/MarginContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 331.0
margin_bottom = 112.0

[node name="SignOutDate" parent="WindowDialog/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 116.0
margin_right = 331.0
margin_bottom = 156.0
date_title = "Sign Out"
key_to_pull = "signOut"

[node name="HBoxContainer3" type="HBoxContainer" parent="WindowDialog/MarginContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 160.0
margin_right = 331.0
margin_bottom = 184.0

[node name="Label" type="Label" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_top = 5.0
margin_right = 36.0
margin_bottom = 19.0
text = "Time:"

[node name="SignOutHour" type="LineEdit" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 40.0
margin_right = 98.0
margin_bottom = 24.0

[node name="Label2" type="Label" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 102.0
margin_top = 5.0
margin_right = 106.0
margin_bottom = 19.0
text = ":"

[node name="SignOutMin" type="LineEdit" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 110.0
margin_right = 168.0
margin_bottom = 24.0

[node name="Label3" type="Label" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 172.0
margin_top = 5.0
margin_right = 260.0
margin_bottom = 19.0
text = "24-Hour Time"

[node name="HSeparator3" type="HSeparator" parent="WindowDialog/MarginContainer/VBoxContainer"]
margin_top = 188.0
margin_right = 331.0
margin_bottom = 192.0

[node name="HBoxContainer4" type="HBoxContainer" parent="WindowDialog/MarginContainer/VBoxContainer"]
margin_left = 90.0
margin_top = 196.0
margin_right = 241.0
margin_bottom = 220.0
size_flags_horizontal = 4
size_flags_vertical = 5

[node name="Label" type="Label" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer4"]
margin_top = 5.0
margin_right = 89.0
margin_bottom = 19.0
text = "Time Worked:"

[node name="TimeWorked" type="LineEdit" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 93.0
margin_right = 151.0
margin_bottom = 24.0
editable = false

[node name="HBoxContainer6" type="HBoxContainer" parent="WindowDialog/MarginContainer/VBoxContainer"]
margin_left = 99.0
margin_top = 224.0
margin_right = 231.0
margin_bottom = 248.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer6"]
margin_top = 5.0
margin_right = 70.0
margin_bottom = 19.0
text = "Admin Pin:"

[node name="lineAdminPin" type="LineEdit" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer6"]
margin_left = 74.0
margin_right = 132.0
margin_bottom = 24.0
align = 1
max_length = 4
secret = true

[node name="HBoxContainer5" type="HBoxContainer" parent="WindowDialog/MarginContainer/VBoxContainer"]
margin_left = 65.0
margin_top = 253.0
margin_right = 265.0
margin_bottom = 293.0
rect_min_size = Vector2( 200, 40 )
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="ButtonAcceptTimeUpdate" type="Button" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer5"]
margin_top = 5.0
margin_right = 75.0
margin_bottom = 35.0
rect_min_size = Vector2( 75, 30 )
size_flags_horizontal = 2
size_flags_vertical = 6
text = "Accept"

[node name="ButtonCancel" type="Button" parent="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer5"]
margin_left = 102.0
margin_top = 5.0
margin_right = 177.0
margin_bottom = 35.0
rect_min_size = Vector2( 75, 30 )
size_flags_horizontal = 2
size_flags_vertical = 4
text = "Cancel"
[connection signal="pressed" from="PanelContainer/VBoxContainer/ButtonClose" to="." method="_on_ButtonClose_pressed"]
[connection signal="hide" from="WindowDialog" to="." method="_on_WindowDialog_hide"]
[connection signal="pressed" from="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer5/ButtonAcceptTimeUpdate" to="." method="_on_ButtonAcceptTimeUpdate_pressed"]
[connection signal="pressed" from="WindowDialog/MarginContainer/VBoxContainer/HBoxContainer5/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
